# Test_Service_Author_Book

./: README.docx  README.md  pyproject.toml
Test_Service_Author_Book/: db.sqlite3  manage.py
Test_Service_Author_Book/Test_Service_Author_Book/: asgi.py  settings.py  urls.py  wsgi.py
Test_Service_Author_Book/authors/: forms.py  models.py  urls.py  views.py
Test_Service_Author_Book/authors/migrations/: 0001_initial.py
Test_Service_Author_Book/books/: forms.py  models.py  urls.py  views.py
Test_Service_Author_Book/books/migrations/: 0001_initial.py  0002_auto_20240810_1712.py  0003_auto_20240810_1721.py  0004_auto_20240810_1813.py  0005_auto_20240810_1815.py  0006_auto_20240810_1817.py  0007_auto_20240810_1826.py
Test_Service_Author_Book/index/: urls.py
Test_Service_Author_Book/templates/authors/: create2.html  show.html  show_all.html  update.html
Test_Service_Author_Book/templates/books/: create2.html  find.html  show.html  show_all.html  show_all_find_author.html  update.html
Test_Service_Author_Book/templates/index/: index.html
